--- a/index.css
+++ b/index.css
@@ -10,3 +10,25 @@ body {
     width: 100%;
     height: 100vh;
 }
+
+#images {
+    margin-top: 100px;
+    display: inline-flex;
+}
+img {
+    margin-left: 50px;
+    margin-top: 100px;
+    border-radius: 10px;
+    border-width: 20px;
+}
+
+iframe {
+    margin-top: 100px;
+    margin-left: 50px;
+    border-radius: 10px;
+    border-width: 20px;
+}
+
+#contact_form {
+    border: 2px solid #000000;
+}
